<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:background="@color/dark"
        android:layout_marginTop="22dp"
        style="@style/main_menu_horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/topMenu"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_burger">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/intensity"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="30sp"
            android:text="@string/studio"
            >
        </TextView>

        <ImageView
            android:id="@+id/topAdd"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="235dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_height="178dp"
            android:layout_width="147dp"
            android:layout_marginStart="110dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/new_title"
            />

        <View
            android:id="@+id/new_title"
            android:layout_height="96dp"
            android:layout_width="111dp"
            android:background="@drawable/ic_new_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:background="@color/menu_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/copy_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_menu_cont"
            android:layout_marginStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/paste_edit"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent">
            <View
                android:id="@+id/copy_edit_icon"
                style="@style/main_menu_bar"
                android:layout_marginStart="0dp"
                android:background="@drawable/ic_copy_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_edit"
                style="@style/main_menu_text_margin"
                android:textAppearance="@style/main_menu_text"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/copy_edit_icon">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/paste_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_menu_cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/copy_edit">
            <View
                android:id="@+id/paste_edit_icon"
                style="@style/main_menu_bar"
                android:layout_marginStart="0dp"
                android:background="@drawable/ic_paste_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/main_menu_text_margin"
                android:text="@string/paste_edit"
                android:textAppearance="@style/main_menu_text"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paste_edit_icon">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_menu_cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/paste_edit">
            <View
                android:id="@+id/save_icon"
                style="@style/main_menu_bar"
                android:layout_marginStart="0dp"
                android:background="@drawable/ic_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_edit"
                android:textAppearance="@style/main_menu_text"
                style="@style/main_menu_text_margin"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_icon">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_menu_cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/save">
            <View
                android:id="@+id/delete_icon"
                style="@style/main_menu_bar"
                android:layout_marginStart="0dp"
                android:background="@drawable/ic_delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_edit"
                android:textAppearance="@style/main_menu_text"
                style="@style/main_menu_text_margin"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delete_icon">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/bottom_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/bottom_bar"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_bar"
            app:layout_constraintStart_toStartOf="@+id/bottom_bar"
            android:background="@color/menu_bottom"
            android:textColor="@color/white"
            android:text="@string/copy"
            android:textSize="22sp"
            android:gravity="center"
            android:alpha="0">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>